--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Detecção do Câncer de Mama Utilizando Algoritmos de Aprendizado de Máquina"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## O que é Bioinformática?\n",
+    "\n",
+    "+ Integra biologia, ciência da computação e estatística para analisar grandes volumes de dados biológicos.\n",
+    "+ Aplicações incluem descoberta de medicamentos, diagnóstico de doenças e medicina personalizada.\n",
+    "\n",
+    "## Por que a Bioinformática é Importante?\n",
+    "\n",
+    "+ Aumenta a precisão diagnóstica ao identificar padrões complexos em dados de saúde.\n",
+    "+ Permite análises rápidas e confiáveis em problemas de saúde pública, como o câncer de mama."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tema escolhido: Câncer de Mama\n",
+    "\n",
+    "+ É o tipo de câncer mais comum entre mulheres e a principal causa de mortalidade feminina relacionada ao câncer.\n",
+    "+ Diagnósticos precoces aumentam significativamente as chances de sobrevivência e reduzem tratamentos desnecessários.\n",
+    "\n",
+    "## Objetivo do Trabalho\n",
+    "\n",
+    "+ Comparar a eficiência de algoritmos de aprendizado de máquina para classificar tumores em benignos ou malignos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Artigos utilizados como base\n",
+    "\n",
+    "+ Artigo 1: Prediction of Breast Cancer​\n",
+    "    - Comparou múltiplos algoritmos (Regressão Logística, KNN, Árvore de Decisão, SVM...) para diagnóstico e prognóstico de câncer de mama.\n",
+    "    - Destaque: SVM apresentou maior precisão (99% em kernel linear).\n",
+    "\n",
+    "+ Artigo 2: Machine Learning in Breast Cancer Diagnosis and Prognosis​\n",
+    "    - Revisou algoritmos como ANN, SVM e KNN aplicados ao WBCD.\n",
+    "    - Resultados destacaram o potencial de modelos híbridos e técnicas de otimização."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algoritmos Escolhidos\n",
+    "\n",
+    "1. Regressão Logística\n",
+    "2. K-Nearest Neighbors (KNN)\n",
+    "3. Support Vector Classifier (SVC)\n",
+    "    - O SVC é uma implementação específica de SVM que se concentra na tarefa de classificação. Permite ajustar o modelo para dados de classificação, incluindo a escolha do kernel (linear, polinomial, RBF, etc.), a regularização e outros parâmetros. No nosso caso, optamos por utilizar o Kernel RBF (Radial Basis Function).\n",
+    "\n",
+    "# Dataset\n",
+    "\n",
+    "+ Breast Cancer Wisconsin (Diagnostic) Dataset\n",
+    "    - Dataset padrão para pesquisas em aprendizado de máquina no diagnóstico de câncer de mama\n",
+    "    - Contém 569 registros e 30 características"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementação"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +319,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +340,7 @@
        "array(['M', 'B'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +663,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +722,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +742,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -694,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1960,7 @@
        "[32 rows x 32 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1953,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2172,7 +2248,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2201,7 +2277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2218,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2303,7 @@
        "(455, 22)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2360,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2452,12 +2528,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SVC é uma implementação específica de SVM que se concentra na tarefa de classificação. permite ajustar o modelo para dados de classificação, incluindo a escolha do kernel (linear, polinomial, RBF, etc.), a regularização e outros parâmetros."
+    "SVC é uma implementação específica de SVM que se concentra na tarefa de classificação. Permite ajustar o modelo para dados de classificação, incluindo a escolha do kernel (linear, polinomial, RBF, etc.), a regularização e outros parâmetros."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
