Adicionando alguns comentários

--- a/main.ipynb
+++ b/main.ipynb
@@ -2262,6 +2262,7 @@
     "tri_df = corr_matrix.mask(mask)\n",
     "\n",
     "to_drop = [x for x in tri_df.columns if any(tri_df[x]>0.92)]\n",
+    "print(\"Colunas removidas:\", to_drop)\n",
     "\n",
     "df = df.drop(to_drop, axis=1)\n",
     "\n",
@@ -2281,9 +2282,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=df.drop('diagnosis', axis=1)\n",
-    "y=df['diagnosis']\n",
+    "X=df.drop('diagnosis', axis=1)#Variáveis\n",
+    "y=df['diagnosis']#O que queremos prever\n",
     "\n",
+    "# Deixar o random_state=0 só para que divida os dados de treino e teste da mesma forma\n",
     "X_train, X_test, y_train ,y_test =train_test_split(X,y, test_size=0.2, random_state=0)\n",
     "\n",
     "# Escalamento (normalização) dos dados\n",
@@ -2378,6 +2380,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    " class_weight='balanced'\n",
+    " O dataset possui mais amostras de \"benigno\" do que \"maligno\", \n",
+    " portanto deixamos o class_weight='balanced', assim o algoritmo ajusta os pesos para dar mais atenção as amostras \"maligno\"\n",
+    "\"\"\" \n",
     "log_reg = LogisticRegression(class_weight='balanced', random_state=42)\n",
     "log_reg.fit(X_train, y_train)\n",
     "\n",
