--- a/main.ipynb
+++ b/main.ipynb
@@ -2343,6 +2343,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enquanto a regressão lienar foca em prever um valor contínuo (como prever a altura de uma pessoa com base na idade), a regressão linear foca em prever uma probabilidade (0 ou 1/Sim ou não)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
