--- a/main.ipynb
+++ b/main.ipynb
@@ -42,13 +42,14 @@
    "source": [
     "## Artigos utilizados como base\n",
     "\n",
-    "+ Artigo 1: Prediction of Breast Cancer​\n",
+    "+ Artigo 1: Prediction of Breast Cancer​ / Publicado em 2018\n",
     "    - Comparou múltiplos algoritmos (Regressão Logística, KNN, Árvore de Decisão, SVM...) para diagnóstico e prognóstico de câncer de mama.\n",
     "    - Destaque: SVM apresentou maior precisão (99% em kernel linear).\n",
     "\n",
-    "+ Artigo 2: Machine Learning in Breast Cancer Diagnosis and Prognosis​\n",
+    "+ Artigo 2: Machine Learning in Breast Cancer Diagnosis and Prognosis​ / Publicado em 2020\n",
     "    - Revisou algoritmos como ANN, SVM e KNN aplicados ao WBCD.\n",
-    "    - Resultados destacaram o potencial de modelos híbridos e técnicas de otimização."
+    "    - Resultados destacaram o potencial de modelos híbridos e técnicas de otimização. Prevenção de overfitting, viés, melhoria de precisão.\n",
+    "    - SVM mostrou alta precisão em várias análises, alcançando até 99,68% em algumas comparações com outras técnicas."
    ]
   },
   {
@@ -65,8 +66,34 @@
     "# Dataset\n",
     "\n",
     "+ Breast Cancer Wisconsin (Diagnostic) Dataset\n",
+    "    Criado pelo Dr. William H. Wolberg na Universidade de Wisconsin.\n",
+    "    \n",
     "    - Dataset padrão para pesquisas em aprendizado de máquina no diagnóstico de câncer de mama\n",
-    "    - Contém 569 registros e 30 características"
+    "    - Contém 569 registros e 30 características\n",
+    "        - Maligno: 212 amostras\n",
+    "        - Benigno: 357 amostras\n",
+    "\n",
+    "    ------------------\n",
+    "    - Raio (radius): Média da distância do centro para o perímetro.\n",
+    "    - Textura (texture): Desvio padrão dos valores de escala de cinza.\n",
+    "    - Perímetro (perimeter).\n",
+    "    - Área (area).\n",
+    "    - Suavidade (smoothness): Variação local nos comprimentos dos raios.\n",
+    "    - Compactação (compactness): (perímetro² / área) - 1.0.\n",
+    "    - Concavidade (concavity): Severidade das porções côncavas do contorno.\n",
+    "    - Pontos côncavos (concave points): Número de porções côncavas do contorno.\n",
+    "    - Simetria (symmetry).\n",
+    "    - Dimensão fractal (fractal dimension): \"Rugosidade\" da linha do contorno.\n",
+    "\n",
+    "    Para cada uma dessas características, são fornecidos:\n",
+    "\n",
+    "    - Média.\n",
+    "    - Erro padrão.\n",
+    "    - Valor máximo.\n",
+    "\n",
+    "-------------------\n",
+    "+ Obtenção:\n",
+    "  As imagens citológicas são obtidas por aspiração por agulha fina (Fine Needle Aspiration, FNA)"
    ]
   },
   {
@@ -78,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +346,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +367,7 @@
        "array(['M', 'B'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +690,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +749,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +769,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -770,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1987,7 @@
        "[32 rows x 32 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1979,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2282,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2303,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2339,7 @@
        "(455, 22)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2457,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2554,7 +2581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2767,7 +2794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
