--- a/main.ipynb
+++ b/main.ipynb
@@ -14,12 +14,17 @@
     "## O que é Bioinformática?\n",
     "\n",
     "+ Integra biologia, ciência da computação e estatística para analisar grandes volumes de dados biológicos.\n",
+    "+ Com essa integração, conseguimos uma junção dos mundos de tecnologia e medicina fazendo cada vez mais descobertas e avanços.\n",
     "+ Aplicações incluem descoberta de medicamentos, diagnóstico de doenças e medicina personalizada.\n",
+    "+ Com o avanço da IA cada vez mais conseguimos um avanço mais rápido e acertivo na bioinformatica.\n",
     "\n",
     "## Por que a Bioinformática é Importante?\n",
     "\n",
     "+ Aumenta a precisão diagnóstica ao identificar padrões complexos em dados de saúde.\n",
-    "+ Permite análises rápidas e confiáveis em problemas de saúde pública, como o câncer de mama."
+    "+ Permite análises rápidas e confiáveis em problemas de saúde pública, como o câncer de mama.\n",
+    "+ Com a medicina personalizada ainda conseguimos um diagnostico mais acertivo para cada paciente.\n",
+    "+ Contribui para o desenvolvimento de novos medicamentos.\n",
+    "+ Contribui também para acompanhar evolução na parte de biomedicina."
    ]
   },
   {
@@ -105,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +351,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +372,7 @@
        "array(['M', 'B'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +695,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +754,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +774,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -797,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1992,7 @@
        "[32 rows x 32 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2287,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2312,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2330,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2344,7 @@
        "(455, 22)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2378,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2484,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2581,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
