--- a/main.ipynb
+++ b/main.ipynb
@@ -34,11 +34,12 @@
     "## Tema escolhido: Câncer de Mama\n",
     "\n",
     "+ É o tipo de câncer mais comum entre mulheres e a principal causa de mortalidade feminina relacionada ao câncer.\n",
-    "+ Diagnósticos precoces aumentam significativamente as chances de sobrevivência e reduzem tratamentos desnecessários.\n",
+    "+ Diagnósticos precoces aumentam significativamente as chances de sobrevivência e reduzem tratamentos desnecessários e com isso traz uma melhor qualidade de vida para o paciente.\n",
     "\n",
     "## Objetivo do Trabalho\n",
     "\n",
-    "+ Comparar a eficiência de algoritmos de aprendizado de máquina para classificar tumores em benignos ou malignos."
+    "+ Comparar a eficiência de algoritmos de aprendizado de máquina para classificar tumores em benignos ou malignos.\n",
+    "+ Com a comparação conseguir identificar qual a melhor acertividade para determinada aplicação e pesquisa."
    ]
   },
   {
