--- a/main.ipynb
+++ b/main.ipynb
@@ -364,39 +364,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['M', 'B'], dtype=object)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.diagnosis.unique()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "O dataset contém 569 ocorrências e 32 colunas.\n",
-    "\n",
-    "- Diagnosis:\n",
-    "    * M = Maligno\n",
-    "    * B = Benigno\n",
-    "\n",
-    "_se = standard error"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -706,10 +673,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['M', 'B'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.diagnosis.unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Verificando se o dataset possui alguma ocorrência sem informação em alguma coluna"
+    "O dataset contém 569 ocorrências e 32 colunas.\n",
+    "\n",
+    "- Diagnosis:\n",
+    "    * M = Maligno\n",
+    "    * B = Benigno\n",
+    "\n",
+    "_se = standard error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Validando as amostras"
    ]
   },
   {
@@ -798,7 +798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transformando e representando visualmente as categorias de diagnóstico em dados numéricos, para utilizar na construção do modelo"
+    "## Transformando as categorias de diagnóstico em dados numéricos, para utilizar na construção do modelo"
    ]
   },
   {
