correção do texto

--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,7 @@
     "+ Permite análises rápidas e confiáveis em problemas de saúde pública, como o câncer de mama.\n",
     "+ Com a medicina personalizada ainda conseguimos um diagnostico mais acertivo para cada paciente.\n",
     "+ Contribui para o desenvolvimento de novos medicamentos.\n",
-    "+ Contribui também para acompanhar evolução na parte de biomedicina."
+    "+ Contribui também para acompanhar evolução na parte de biologia."
    ]
   },
   {
